--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,6 @@
     "port": 8000,
     
     "database": {
-        "type": "sqlite",
-        "filename": "./mydb.sqlite"
+        "type": "sqlite"
     }
 }
