feat: New database functions prepare() and exists() feat: Create an example mod by default when initializing database feat: Added config fields for default admin user fix: Init database working but yet still not complete fix: added .vscode to gitignore

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,12 @@
 {
     "port": 8000,
+
+    "users": {
+        "admin": {
+            "username": "admin",
+            "password": "admin"
+        }
+    },
     
     "database": {
         "type": "sqlite"
