--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "packageManager": "pnpm@10.5.2",
   "dependencies": {
     "better-sqlite3": "^11.9.1",
+    "dompurify": "^3.2.4",
     "express": "^4.21.2",
+    "jsdom": "^26.0.0",
+    "marked": "^15.0.7",
     "mysql": "^2.18.1"
   },
   "pnpm": {
