--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.5.2",
   "dependencies": {
+    "ajv": "^8.17.1",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.9.1",
     "dompurify": "^3.2.4",
