--- a/config/config.json
+++ b/config/config.json
@@ -12,5 +12,8 @@
         "type": "sqlite"
     },
 
-    "JWT_secret": "HGF7654EGBNKJNBJH6754356788GJHGY"
+    "auth": {
+        "JWT_secret": "HGF7654EGBNKJNBJH6754356788GJHGY",
+        "tokenExpiry": "1h"
+    }
 }
