--- a/backend/package.json
+++ b/backend/package.json
@@ -11,16 +11,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "ajv": "^8.17.1",
     "bcrypt": "^5.1.1",
-    "better-sqlite3": "^11.9.1",
-    "dompurify": "^3.2.4",
+    "better-sqlite3": "^11.10.0",
+    "cors": "^2.8.5",
+    "dompurify": "^3.2.5",
     "express": "^5.1.0",
-    "jsdom": "^26.0.0",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
-    "marked": "^15.0.7",
+    "marked": "^15.0.11",
     "mysql": "^2.18.1"
   },
   "pnpm": {
@@ -30,6 +31,6 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.10"
   }
 }
