--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.26.5",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
+    "preact": "^10.26.6",
     "preact-router": "^4.1.2"
   },
   "devDependencies": {
