--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -14,6 +14,6 @@
 
     "auth": {
         "JWT_secret": "HGF7654EGBNKJNBJH6754356788GJHGY",
-        "tokenExpiry": "1h"
+        "tokenExpiry": "30d"
     }
 }
