Funcionnal custom checkboxes, fixed small card component and added the ability to launch both backend and frontend at once

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wf-radio-backend",
-  "version": "1.0.0",
+  "version": "Alpha 1",
   "description": "",
   "main": "server.js",
   "scripts": {
