--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.10.0",
     "cors": "^2.8.5",
